--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ windows = { version = "0.61.3", features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Input_KeyboardAndMouse" ,
 ] }
+winreg = "0.55"
